<resources>
    <string name="app_name">homeTfriends</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">HomeTfriends</string>
    <string name="nav_header_subtitle">2021_SE_in_YU</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_food">Food</string>
    <string name="menu_exercise">Exercise</string>
    <string name="menu_group">Group</string>
    <string name="menu_shopping">Shopping</string>
    <string name="menu_my_page">My_page</string>
    <string name="menu_logout">Logout</string>
</resources>