<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_food"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_food" />
        <item
            android:id="@+id/nav_exercise"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_exercise" />
        <item
            android:id="@+id/nav_group"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_group" />
        <item
            android:id="@+id/nav_shopping"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_shopping" />
        <item
            android:id="@+id/nav_my_page"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_my_page" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_logout" />
    </group>
</menu>